@startuml

interface ICommand {
    + Build() : System.CommandLine.Command
    + Run(parseResult : System.CommandLine.ParseResult) : int
}

abstract class CommandBase {
    {abstract} + Name : String
    {abstract} + Description : String

    # Configure(command : System.CommandLine.Command) : void
    + AddAliases(aliases : List<String>) : void
    {abstract} + Run(parseResult : System.CommandLine.ParseResult) : int
    + Build() : System.CommandLine.Command
}

class SearchCommand {
    + Name : String
    + Description : String
    - _query : Argument<String>
    - _exact : Option<Boolean>
    - _global : Option<Boolean>

    # Configure(command : System.CommandLine.Command) : void
    + Run(parseResult : System.CommandLine.ParseResult) : int
}

class InitialiseCommand {
    + Name : String
    + Description : String
    - _mainFolder : Option<String>

    # Configure(command : System.CommandLine.Command) : void
    + Run(parseResult : System.CommandLine.ParseResult) : int
}

ICommand <|.. CommandBase
CommandBase <|-- SearchCommand
CommandBase <|-- InitialiseCommand

@enduml